--- a/sass/layout/_wedo.scss
+++ b/sass/layout/_wedo.scss
@@ -1,6 +1,10 @@
 .wedo {
+  display: none;
   margin-bottom: 94px;
   padding-top: 0;
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
 }
 
 .wedo-list {
