--- a/sass/layout/_ourclient.scss
+++ b/sass/layout/_ourclient.scss
@@ -1,29 +1,34 @@
 .team-title {
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   color: var(--title-text-color);
   column-rule: var(--title-text-color);
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
 }
 
 .client {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .client-list {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
   gap: 30px;
-  margin-top: 0;
-  margin-bottom: 0%;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  width: 100%;
+
+  @media screen and (max-width: 480px) {
+    justify-content: center;
+  }
 }
 
 .client-link {
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: 1px solid var(--icon-fill);
   border-radius: 4px;
@@ -32,6 +37,16 @@
   align-items: center;
   justify-content: center;
   color: var(--icon-fill);
+
+  @media screen and (min-width: 768px) {
+    width: 226px;
+    height: 92px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+    height: 92px;
+  }
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
