--- a/sass/layout/_ourteam.scss
+++ b/sass/layout/_ourteam.scss
@@ -1,26 +1,27 @@
 .main-content__team-set {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--back-team-color);
 }
 
 .team-set__title {
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .team-set__title--font {
   color: var(--title-text-color);
   column-rule: var(--title-text-color);
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
 }
 
 .team-set__team-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 30px;
   margin-top: 0;
   margin-bottom: 0;
@@ -28,7 +29,14 @@
 }
 
 .team-set__team-item {
-  width: calc((100% - 60px) / 4);
+  width: 100%;
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .team-set__team-item--color {
@@ -39,7 +47,7 @@
 
 .team-item__image {
   margin-bottom: 30px;
-  width: 270px;
+  width: 100%;
 }
 
 .team-set__pd,
@@ -90,13 +98,15 @@
   justify-content: center;
   color: var(--icon-fill);
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 1200px) {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover,
-  &:focus {
-    background-color: #2196f3;
-    color: #ffffff;
+    &:hover,
+    &:focus {
+      background-color: #2196f3;
+      color: #ffffff;
+    }
   }
 }
 
