--- a/sass/layout/_priorities.scss
+++ b/sass/layout/_priorities.scss
@@ -1,5 +1,7 @@
 .task-list {
+  width: 100%;
   display: flex;
+  flex-wrap: wrap;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
@@ -7,17 +9,23 @@
 }
 
 .task {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .task-item {
-  width: 270px;
+  width: 100%;
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .task-pic {
   margin-top: 0;
-  width: 270px;
+  width: 100%;
   height: 120px;
   border-radius: 4px;
   background-color: var(--back-team-color);
@@ -35,7 +43,8 @@
 .punctuality,
 .planning,
 .tech {
-  margin-top: 0;
+  text-align: center;
+  margin-top: 30px;
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 700;
