--- a/css/main.css
+++ b/css/main.css
@@ -96,8 +96,8 @@ img {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   padding-top: 24px;
   padding-bottom: 25px;
@@ -205,8 +205,8 @@ img {
   color: var(--hero-color);
   font-family: "Raleway" sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
 }
 
@@ -216,21 +216,28 @@ img {
   padding-left: 0;
 }
 
+.soc-block-addres {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .soc-block-addres {
+    align-items: flex-start;
+  }
+}
+
 .cont-foot__item {
-  color: var(--primery-text-color);
-  font-weight: 500;
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 400;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: 1.71;
   letter-spacing: 0.02em;
   font-style: normal;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.cont-foot__item:hover, .cont-foot__item:focus {
-  color: var(--accent-color);
 }
 
 .cont-foot__mail-f {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
 .address__sity-street {
@@ -238,21 +245,51 @@ img {
   font-style: normal;
   line-height: 1.71;
   margin-top: 0;
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
 .address {
+  text-align: center;
+  align-items: center;
   width: 231px;
   height: 81px;
 }
+@media screen and (min-width: 1200px) {
+  .address {
+    text-align: left;
+  }
+}
 
 .footer__foot-block {
-  align-items: baseline;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 60px;
+}
+@media screen and (min-width: 768px) {
+  .footer__foot-block {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-around;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__foot-block {
+    flex-wrap: nowrap;
+    align-items: baseline;
+  }
 }
 
 .foot-block__foot-soc {
-  margin-left: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .foot-block__foot-soc {
+    align-items: flex-start;
+  }
 }
 
 .foot-soc__title {
@@ -294,12 +331,22 @@ img {
 
 .foot-block__foot-form {
   display: flex;
-  align-items: flex-end;
-  margin-left: auto;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  .foot-block__foot-form {
+    align-self: center;
+    justify-content: flex-end;
+    flex-direction: row;
+    gap: 0px;
+  }
 }
 
 .foot-form__label {
-  margin: 0px;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -307,11 +354,9 @@ img {
   text-transform: uppercase;
   color: var(--hero-color);
 }
-
 .foot-form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
-  margin-top: 20px;
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -330,9 +375,20 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
-.foot-form__wrap-batton {
-  margin-left: 10px;
+@media screen and (min-width: 480px) {
+  .foot-form__input {
+    max-width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .foot-form__input {
+    max-width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .foot-form__input {
+    max-width: 358px;
+  }
 }
 
 .foot-form__button {
@@ -352,6 +408,11 @@ img {
   letter-spacing: 0.06em;
   cursor: pointer;
 }
+@media screen and (min-width: 1200px) {
+  .foot-form__button {
+    margin-left: 12px;
+  }
+}
 
 .foot-form__svg {
   margin-left: 10px;
@@ -363,7 +424,12 @@ img {
   padding-left: 0;
   display: flex;
   gap: 8px;
-  justify-content: center;
+  flex-wrap: wrap;
+}
+@media screen and (min-width: 768px) {
+  .button-portfolio {
+    justify-content: center;
+  }
 }
 
 .button-portfolio-item {
@@ -391,22 +457,34 @@ img {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-  margin-top: 0;
+  margin-top: 40px;
   margin-bottom: 0;
   padding-left: 0;
 }
 
 .imgp {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .imgp:hover, .imgp:focus {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .work-item {
-  width: calc((100% - 60px) / 3);
+  width: 100%;
   background-color: var(--hero-color);
+}
+@media screen and (min-width: 768px) {
+  .work-item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .work-item {
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .work-pretitle {
@@ -432,6 +510,7 @@ img {
 }
 
 .border-title {
+  flex-grow: 1;
   border-bottom: 1px solid var(--portfolio-photo-back-color);
   border-left: 1px solid var(--portfolio-photo-back-color);
   border-right: 1px solid var(--portfolio-photo-back-color);
@@ -465,7 +544,9 @@ img {
 }
 
 .imgp:hover .over::after,
-.imgp:hover .over-text {
+.imgp:focus .over::after,
+.imgp:hover .over-text,
+.imgp:focus .over-text {
   transform: translateY(-100%);
 }
 
@@ -751,10 +832,6 @@ img {
   color: var(--icon-fill);
 }
 
-.task-list-pict {
-  margin: 25px 100px;
-}
-
 .details,
 .punctuality,
 .planning,
@@ -1029,6 +1106,6 @@ img {
 
 .porfolio {
   color: var(--back-midle-color);
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }/*# sourceMappingURL=main.css.map */
