--- a/sass/components/_buttons-portfolio.scss
+++ b/sass/components/_buttons-portfolio.scss
@@ -4,7 +4,10 @@
   padding-left: 0;
   display: flex;
   gap: 8px;
-  justify-content: center;
+  flex-wrap: wrap;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
 }
 
 .button-portfolio-item {
