--- a/sass/components/_footer-contacts.scss
+++ b/sass/components/_footer-contacts.scss
@@ -4,22 +4,30 @@
   padding-left: 0;
 }
 
+.soc-block-addres {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media screen and (min-width: 1200px) {
+    align-items: flex-start;
+  }
+}
 .cont-foot__item {
-  color: var(--primery-text-color);
-  font-weight: 500;
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 400;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: 1.71;
   letter-spacing: 0.02em;
   font-style: normal;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
+  // transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // &:hover,
+  // &:focus {
+  //   color: var(--accent-color);
+  // }
 }
 
 .cont-foot__mail-f {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
 .address__sity-street {
@@ -27,10 +35,15 @@
   font-style: normal;
   line-height: 1.71;
   margin-top: 0;
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
 .address {
+  text-align: center;
+  align-items: center;
   width: 231px;
   height: 81px;
+  @media screen and (min-width: 1200px) {
+    text-align: left;
+  }
 }
