--- a/sass/components/_fot-block.scss
+++ b/sass/components/_fot-block.scss
@@ -1,22 +1,32 @@
 .foot-block__foot-form {
   display: flex;
-  align-items: flex-end;
-  margin-left: auto;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+  @media screen and (min-width: 1200px) {
+    align-self: center;
+    justify-content: flex-end;
+    flex-direction: row;
+    gap: 0px;
+  }
 }
 
 .foot-form__label {
-  margin: 0px;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--hero-color);
+  @media screen and (min-width: 1200px) {
+  }
 }
+
 .foot-form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
-  margin-top: 20px;
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -34,10 +44,17 @@
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
   }
-}
+  @media screen and (min-width: 480px) {
+    max-width: 450px;
+  }
 
-.foot-form__wrap-batton {
-  margin-left: 10px;
+  @media screen and (min-width: 768px) {
+    max-width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 358px;
+  }
 }
 
 .foot-form__button {
@@ -56,6 +73,9 @@
   align-items: center;
   letter-spacing: 0.06em;
   cursor: pointer;
+  @media screen and (min-width: 1200px) {
+    margin-left: 12px;
+  }
 }
 
 .foot-form__svg {
