--- a/sass/components/_portfolio-examples.scss
+++ b/sass/components/_portfolio-examples.scss
@@ -2,25 +2,34 @@
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-  margin-top: 0;
+  margin-top: 40px;
   margin-bottom: 0;
   padding-left: 0;
 }
 
 .imgp {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
 
 .work-item {
-  width: calc((100% - 60px) / 3);
+  width: 100%;
   background-color: var(--hero-color);
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .work-pretitle {
@@ -49,6 +58,7 @@
 }
 
 .border-title {
+  flex-grow: 1;
   border-bottom: 1px solid var(--portfolio-photo-back-color);
   border-left: 1px solid var(--portfolio-photo-back-color);
   border-right: 1px solid var(--portfolio-photo-back-color);
@@ -83,6 +93,8 @@
 }
 
 .imgp:hover .over::after,
-.imgp:hover .over-text {
+.imgp:focus .over::after,
+.imgp:hover .over-text,
+.imgp:focus .over-text {
   transform: translateY(-100%);
 }
