--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -13,13 +13,25 @@
   .backdrop.is-hidden & {
     transform: translate(-50%, -50%) scale(0.1);
   }
+
+  @media screen and (min-width: 320px) {
+    max-width: 90%;
+    height: 609px;
+  }
+
+  @media screen and (min-width: 480px) {
+    max-width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 528px;
+  }
 }
 
 .btn-modal {
   position: absolute;
   display: inline-flex;
-  transform: translateY(-40px);
-  margin: 11px 8px 2px 450px;
+
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -29,6 +41,14 @@
 
   &:focus {
     border: 1px solid var(--accent-color);
+  }
+  @media screen and (min-width: 480px) {
+    transform: translateY(-40px);
+    margin: 11px 8px 2px 370px;
+  }
+  @media screen and (min-width: 1200px) {
+    transform: translateY(-40px);
+    margin: 11px 8px 2px 450px;
   }
 }
 
@@ -41,7 +61,10 @@
 }
 
 .mod-form {
-  width: 448px;
+  // width: 448px;
+  @media screen and (min-width: 320px) {
+    min-width: 100%;
+  }
 }
 
 .form-title {
@@ -53,6 +76,15 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  // @media screen and (min-width: 320px) {
+  //   font-size: 15px;
+  // }
+  @media screen and (min-width: 480px) {
+    width: 370px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+  }
 }
 
 .form-cont-list {
@@ -106,6 +138,13 @@
   &:focus {
     border: 1px solid var(--accent-color);
   }
+
+  @media screen and (min-width: 480px) {
+    max-width: 370px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 448px;
+  }
 }
 
 .form-text {
@@ -125,6 +164,12 @@
     line-height: 1.17;
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
+  }
+  @media screen and (min-width: 480px) {
+    max-width: 370px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 448px;
   }
 }
 
@@ -156,23 +201,51 @@
   letter-spacing: 0.03em;
   color: var(--primery-text-color);
   align-items: center;
-  justify-content: center;
+
+  @media screen and (min-width: 1200px) {
+    justify-content: center;
+  }
 }
 
 .checkbox-text {
   margin: 0px;
-  font-size: 14px;
-  line-height: 1.7;
+
   letter-spacing: 0.03em;
   color: rgba(117, 117, 117, 1);
+
+  @media screen and (min-width: 320px) {
+    font-size: 10px;
+  }
+
+  @media screen and (min-width: 480px) {
+    font-size: 12px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.7;
+  }
 }
 
 .form-link {
   margin-left: 7px;
-  font-size: 14px;
-  line-height: 1.7;
+  // font-size: 14px;
+  // line-height: 1.7;
   letter-spacing: 0.03em;
   color: rgba(33, 150, 243, 1);
+
+  @media screen and (min-width: 320px) {
+    font-size: 10px;
+  }
+
+  @media screen and (min-width: 480px) {
+    font-size: 12px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.7;
+  }
 }
 
 .form-button {
@@ -193,4 +266,8 @@
   align-items: center;
   letter-spacing: 0.06em;
   cursor: pointer;
+  @media screen and (min-width: 480px) {
+    margin-left: 85px;
+    margin-right: 85px;
+  }
 }
