--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,17 +1,42 @@
 .hero {
+  max-width: 480px;
+  height: 400px;
   background-color: var(--back-hero-footer-color);
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding: 118px 60px;
+  // padding-top: 200px;
+  // padding-bottom: 200px;
 
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../css/Img.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  max-width: 1600px;
-  height: 600px;
+  max-width: 480px;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
+  @media screen and (min-width: 320px) {
+    width: 100%;
+    .container {
+      display: flex;
+      justify-content: center;
+    }
+  }
+  @media screen and (min-width: 480px) {
+    max-width: 100%;
+    .container {
+      display: flex;
+      justify-content: center;
+    }
+  }
+}
+
+.hero-content {
+  // @media screen and (max-width: 480px) {
+  //   max-width: 200px;
+  //   flex-direction: column;
+  //   align-items: center;
+  // }
 }
 
 .hero-head {
@@ -21,8 +46,22 @@
   margin-right: auto;
   color: var(--hero-color);
   font-weight: 900;
-  font-size: 26px;
+  font-size: 22px;
   line-height: 1.61;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+
+  @media screen and (max-width: 479.5px) {
+    // min-width: 360px;
+    // min-height: 84px;
+    font-size: 18px;
+  }
+  @media screen and (min-width: 480px) {
+    width: 360px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 750px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
