--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -19,7 +19,8 @@
 }
 
 .navigations {
-  display: flex;
+  display: none;
+  // display: flex;
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
