--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ img {
 }
 
 .navigations {
-  display: flex;
+  display: none;
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
@@ -187,11 +187,10 @@ img {
 }
 
 .contacts {
-  display: flex;
+  display: none;
   margin-top: 0;
   margin-bottom: 0;
   margin-left: auto;
-  display: flex;
   align-items: center;
   gap: 50px;
 }
@@ -594,7 +593,7 @@ img {
 .modal {
   position: absolute;
   width: 528px;
-  padding: 40px;
+  padding: 25px 30px;
   top: 50%;
   left: 50%;
   border-radius: 4px;
@@ -615,6 +614,7 @@ img {
 @media screen and (min-width: 480px) {
   .modal {
     max-width: 450px;
+    padding: 40px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -671,6 +671,13 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+}
+@media screen and (min-width: 320px) {
+  .form-title {
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 @media screen and (min-width: 480px) {
   .form-title {
@@ -804,7 +811,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .check-agre {
-    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -871,19 +878,172 @@ img {
   letter-spacing: 0.06em;
   cursor: pointer;
 }
-@media screen and (min-width: 480px) {
-  .form-button {
-    margin-left: 85px;
-    margin-right: 85px;
-  }
-}
-
 .header {
+  display: flex;
   border-bottom: 1px solid var(--border-bc);
 }
 .header .container {
   display: flex;
   align-items: center;
+}
+
+.mob-cotainer {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+@media screen and (min-width: 480px) {
+  .mob-cotainer {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mob-cotainer {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mob-cotainer {
+    max-width: 1200px;
+  }
+}
+
+.mob-menu {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  bottom: 0;
+  padding-left: 40px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 48px;
+  background-color: #ffffff;
+}
+.mob-menu .mob-cotainer {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  overflow: auto;
+}
+
+.container .menu-open {
+  display: inline-flex;
+  width: 40px;
+  height: 40px;
+  padding: 0px;
+  margin-left: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: none;
+  background-color: rgba(28, 28, 28, 0);
+  cursor: pointer;
+}
+
+.menu-close {
+  display: block;
+  margin: 0;
+  margin-left: auto;
+  margin-top: 10px;
+  border: none;
+  cursor: pointer;
+  background-color: #ffffff;
+}
+
+.menu-svd:hover,
+.menu-svd:focus {
+  fill: var(--accent-color);
+}
+
+.mob-navigations {
+  margin: 0;
+}
+.mob-navigations :not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-navigations-link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+.mob-navigations-link.current {
+  color: var(--accent-color);
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.mob-contacts {
+  margin-bottom: 0;
+}
+.mob-contacts :not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-contacts-tel {
+  font-weight: 500;
+  font-size: 26px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+@media screen and (min-width: 480px) {
+  .mob-contacts-tel {
+    font-size: 34px;
+  }
+}
+
+.mob-contacts-link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mob-soc-list {
+  display: flex;
+  margin-top: 64px;
+  margin-bottom: 0px;
+  padding-left: 0;
+}
+.mob-soc-list :not(:first-child) {
+  padding-left: 10px;
+}
+.mob-soc-list :not(:last-child) {
+  padding-right: 10px;
+}
+.mob-soc-list :not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+@media screen and (max-width: 400px) {
+  .mob-soc-list {
+    flex-wrap: wrap;
+    gap: 2px;
+  }
+  .mob-soc-list :nth-child(3) {
+    padding-left: 0px;
+  }
+}
+
+.mob-soc-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 22px;
+  cursor: pointer;
+}
+
+.mob-soc-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }
 
 .hero {
