--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,11 @@ img {
   padding-top: 25px;
   padding-bottom: 25px;
 }
+@media screen and (min-width: 768px) {
+  .navigations {
+    display: flex;
+  }
+}
 
 .navigations__link--current {
   position: relative;
@@ -192,7 +197,20 @@ img {
   margin-bottom: 0;
   margin-left: auto;
   align-items: center;
-  gap: 50px;
+}
+@media screen and (min-width: 768px) {
+  .contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts {
+    flex-direction: row;
+    gap: 50px;
+  }
 }
 
 .logo {
@@ -892,24 +910,10 @@ img {
   margin-right: auto;
   width: 100%;
 }
-@media screen and (min-width: 480px) {
-  .mob-cotainer {
-    max-width: 480px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .mob-cotainer {
-    max-width: 768px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .mob-cotainer {
-    max-width: 1200px;
-  }
-}
 
 .mob-menu {
   position: fixed;
+  z-index: 2;
   width: 100vw;
   height: 100vh;
   left: 0;
@@ -919,8 +923,19 @@ img {
   padding-top: 10px;
   padding-bottom: 48px;
   background-color: #ffffff;
+  transform: translateY(0);
 }
-.mob-menu .mob-cotainer {
+@media screen and (min-width: 768px) {
+  .mob-menu {
+    display: none;
+  }
+}
+
+.mob-menu.is-hidden {
+  transform: translateY(100%);
+}
+
+.mob-cotainer {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -940,6 +955,11 @@ img {
   background-color: rgba(28, 28, 28, 0);
   cursor: pointer;
 }
+@media screen and (min-width: 768px) {
+  .container .menu-open {
+    display: none;
+  }
+}
 
 .menu-close {
   display: block;
@@ -949,6 +969,11 @@ img {
   border: none;
   cursor: pointer;
   background-color: #ffffff;
+}
+
+.menu-close:hover,
+.menu-close:focus {
+  fill: var(--accent-color);
 }
 
 .menu-svd:hover,
@@ -1052,7 +1077,6 @@ img {
   background-color: var(--back-hero-footer-color);
   text-align: center;
   padding: 118px 60px;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../css/Img.jpg");
   background-repeat: no-repeat;
   background-position: center;
   max-width: 480px;
@@ -1063,10 +1087,16 @@ img {
 @media screen and (min-width: 320px) {
   .hero {
     width: 100%;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/css/Header-mob.jpg);
   }
   .hero .container {
     display: flex;
     justify-content: center;
+  }
+}
+@media screen and (min-width: 320px) and (min-device-pixel-ratio: 2), screen and (min-width: 320px) and (min-resolution: 192dpi), screen and (min-width: 320px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/css/Header-mobx2.jpg);
   }
 }
 @media screen and (min-width: 480px) {
@@ -1076,6 +1106,26 @@ img {
   .hero .container {
     display: flex;
     justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/css/Header-tab.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/css/Header-tabx2.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/css/Img.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/css/Header-dtx2.jpg);
   }
 }
 
