--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -26,7 +26,52 @@
   margin-top: 0;
   margin-bottom: 0;
   margin-left: auto;
-  // display: flex;
   align-items: center;
-  gap: 50px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    gap: 50px;
+  }
 }
+
+// .contacts__item {
+//   display: flex;
+//   align-items: center;
+//   color: var(--primery-text-color);
+//   font-weight: 500;
+//   font-size: 14px;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
+//   font-style: normal;
+
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   &:hover,
+//   &:focus {
+//     color: var(--accent-color);
+//   }
+// }
+
+// .contacts__pict {
+//   align-content: center;
+//   margin-right: 10px;
+//   fill: currentColor;
+// }
+// .contacts {
+//   display: none;
+//   // display: flex;
+//   margin-top: 0;
+//   margin-bottom: 0;
+//   margin-left: auto;
+
+//   align-items: center;
+//   gap: 50px;
+//   @media screen and (min-width: 768px) {
+//     display: flex;
+//   }
+// }
