--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -4,11 +4,7 @@
   background-color: var(--back-hero-footer-color);
   text-align: center;
   padding: 118px 60px;
-  // padding-top: 200px;
-  // padding-bottom: 200px;
 
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../css/Img.jpg');
   background-repeat: no-repeat;
   background-position: center;
   max-width: 480px;
@@ -21,6 +17,12 @@
       display: flex;
       justify-content: center;
     }
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(/css/Header-mob.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(/css/Header-mobx2.jpg);
+    }
   }
   @media screen and (min-width: 480px) {
     max-width: 100%;
@@ -29,14 +31,23 @@
       justify-content: center;
     }
   }
-}
 
-.hero-content {
-  // @media screen and (max-width: 480px) {
-  //   max-width: 200px;
-  //   flex-direction: column;
-  //   align-items: center;
-  // }
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(/css/Header-tab.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(/css/Header-tabx2.jpg);
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(/css/Img.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(/css/Header-dtx2.jpg);
+    }
+  }
 }
 
 .hero-head {
@@ -52,8 +63,6 @@
   text-transform: uppercase;
 
   @media screen and (max-width: 479.5px) {
-    // min-width: 360px;
-    // min-height: 84px;
     font-size: 18px;
   }
   @media screen and (min-width: 480px) {
