--- a/css/main.css
+++ b/css/main.css
@@ -1087,7 +1087,7 @@ img {
 @media screen and (min-width: 320px) {
   .hero {
     width: 100%;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/css/Header-mob.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./css/Header-mob.jpg);
   }
   .hero .container {
     display: flex;
@@ -1096,7 +1096,7 @@ img {
 }
 @media screen and (min-width: 320px) and (min-device-pixel-ratio: 2), screen and (min-width: 320px) and (min-resolution: 192dpi), screen and (min-width: 320px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/css/Header-mobx2.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./css/Header-mobx2.jpg);
   }
 }
 @media screen and (min-width: 480px) {
