--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -18,10 +18,10 @@
       justify-content: center;
     }
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(/css/Header-mob.jpg);
+      url(./css/Header-mob.jpg);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(/css/Header-mobx2.jpg);
+        url(./css/Header-mobx2.jpg);
     }
   }
   @media screen and (min-width: 480px) {
