--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -18,10 +18,10 @@
       justify-content: center;
     }
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(./css/Header-mob.jpg);
+      url(../../img/hero-mob-x1.jpg);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(./css/Header-mobx2.jpg);
+        url(../../img/hero-mob-x2.jpg);
     }
   }
   @media screen and (min-width: 480px) {
@@ -34,18 +34,18 @@
 
   @media screen and (min-width: 768px) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(./css/Header-tab.jpg);
+      url(../../img/hero-tab-x1.jpg);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(./css/Header-tabx2.jpg);
+        url(../../img/hero-tab-x2.jpg);
     }
   }
   @media screen and (min-width: 1200px) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(./css/Img.jpg);
+      url(../../img/hero-dt-x1.jpg);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(./css/Header-dtx2.jpg);
+        url(../../img/hero-dt-x2.jpg);
     }
   }
 }
