--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -3,7 +3,8 @@
   height: 400px;
   background-color: var(--back-hero-footer-color);
   text-align: center;
-  padding: 118px 60px;
+  padding-top: 118px;
+  padding-bottom: 118px;
 
   background-repeat: no-repeat;
   background-position: center;
@@ -41,6 +42,8 @@
     }
   }
   @media screen and (min-width: 1200px) {
+    height: 600px;
+    padding: 200px 60px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../img/hero-dt-x1.jpg);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
