--- a/sass/layout/_ourclient.scss
+++ b/sass/layout/_ourclient.scss
@@ -13,6 +13,11 @@
 .client {
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    display: block;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .client-list {
   display: flex;
