--- a/sass/layout/_ourteam.scss
+++ b/sass/layout/_ourteam.scss
@@ -2,6 +2,10 @@
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: var(--back-team-color);
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team-set__title {
