--- a/sass/layout/_priorities.scss
+++ b/sass/layout/_priorities.scss
@@ -9,8 +9,8 @@
 }
 
 .task {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .task-item {
@@ -39,7 +39,6 @@
 .punctuality,
 .planning,
 .tech {
-  text-align: center;
   margin-top: 30px;
   margin-bottom: 10px;
   color: var(--title-text-color);
@@ -48,6 +47,9 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 
 .details-text,
