--- a/sass/layout/_wedo.scss
+++ b/sass/layout/_wedo.scss
@@ -1,9 +1,9 @@
 .wedo {
   display: none;
-  margin-bottom: 94px;
   padding-top: 0;
   @media screen and (min-width: 1200px) {
     display: block;
+    padding-bottom: 94px;
   }
 }
 
