--- a/css/main.css
+++ b/css/main.css
@@ -1093,6 +1093,7 @@ img {
 @media screen and (min-width: 320px) {
   .hero {
     width: 100%;
+    background-size: contain;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-mob-x1.jpg);
   }
   .hero .container {
@@ -1126,6 +1127,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .hero {
+    width: 100%;
     height: 600px;
     padding: 200px 60px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-dt-x1.jpg);
